# ReproBLAS

./: .gitignore  CMakeLists.txt
include/: binned.h  binnedBLAS.h  reproBLAS.h
results/: RNGExample_cpu.txt  kmeans_cpu.txt  mri-gridding_cpu.txt  spmv_cpu.txt
src/: CMakeLists.txt
src/binned/: CMakeLists.txt  sballoc.c  sbsbset.c  sbsbze.c  sbsetzero.c
src/binnedBLAS/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/RNGExample/: CMakeLists.txt
src/examples/RNGExample/StrongReproducibility/: CMakeLists.txt  RNGExample.cpp
src/examples/kmeans (Rodinia)/: CMakeLists.txt
src/examples/kmeans (Rodinia)/StrongReproducibility/: CMakeLists.txt  cluster.cpp  kmeans.cpp  kmeans.h  kmeans_clustering.cpp
src/examples/mri-gridding (Parboil)/: CMakeLists.txt
src/examples/mri-gridding (Parboil)/StrongReproducibility/: CMakeLists.txt  CPU_kernels.cpp  UDTypes.h  main.cpp
src/examples/serial_mat_vect/: CMakeLists.txt
src/examples/spmv (Parboil)/: CMakeLists.txt
src/examples/spmv (Parboil)/Base/: CMakeLists.txt  main.cpp
src/examples/spmv (Parboil)/StrongReproducibility/: CMakeLists.txt  main.cpp
src/examples/sum_sine/: CMakeLists.txt  sum_sine.c
src/examples/sum_sine_bins/: CMakeLists.txt  sum_sine_bins.c
src/reproBLAS/: CMakeLists.txt  rsgemm.c  rsgemv.c
tests/benchs/: bench_sbsbadd.c
tests/checks/: corroborate_rsgemm.c  corroborate_rsgemv.c  validate_external_rsblas1.c
